--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,16 @@
     --scroll-thumb-color: hsl(var(--hue-color), 4%, 16%);
     --scroll-thumb-color-alt:hsl(var(--hue-color), 4%, 20%);
 
+    /* font and typography */
+    --body-font:'Poppins', sans-serif;
+    --biggest-font-size: 5rem;
+    --bigger-font-size: 3.5rem;
+    --big-font-size: 2.5rem; 
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1.125rem;
+    --normal-font-size:.938rem;
+    --small-font-size:.813rem;
+    --smaller-font-size:.75rem;
+    --text-line-height:2rem;
+
 }
