--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,12 @@
     /* font weight */
     --font-medium:500;
     --font-semi-bold:600;
+
+    /* Margenes Bottom */
+    --mb-0-5:.5rem;
+    --mb-0-75:.75rem;
+    --mb-1: 1rem;
+    --mb-1-5:1.5rem;
+    --mb-2: 2rem;
+    --mb-2-5: 2.5rem;
 }
