--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,16 @@
     }
 
 }
+
+
+/*-------------------------------- BASE --------------------------- */
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+
