--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,4 +2,5 @@
 @use 'base/base';
 @use 'layout/layout';
 @use 'components/header';
-@use 'components/home'
+@use 'components/home';
+@use 'components/buttons';
