--- a/css/styles.css
+++ b/css/styles.css
@@ -204,6 +204,11 @@ img {
   top: 0;
 }
 
+/* Change background header */
+.scroll-header {
+  background-color: var(--body-color);
+}
+
 /*=============== HOME ===============*/
 .home__img {
   width: 250px;
