--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,4 +5,5 @@
 @use 'components/home';
 @use 'components/buttons';
 @use 'components/sponsor';
-@use 'components/specs'
+@use 'components/specs';
+@use 'components/case';
