--- a/css/styles.css
+++ b/css/styles.css
@@ -316,4 +316,22 @@ img {
   right: -4rem;
 }
 
+/*=============== CASE ===============*/
+.case__container {
+  position: relative;
+  grid-template-columns: repeat(2, 1fr);
+}
+.case__data {
+  padding: 5rem 0 3rem;
+}
+.case__img {
+  width: 250px;
+  position: absolute;
+  left: -7rem;
+}
+.case__description {
+  margin-bottom: var(--mb-1-5);
+  line-height: var(--text-line-height);
+}
+
 /*# sourceMappingURL=styles.css.map */
