--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -86,6 +86,14 @@
     background-color: var(--body-color);
 }
 
+/*active Link*/
+.active-link{
+    background: var(--white-color);
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+} 
+
 
 
 
