--- a/sass/components/_mediaqueries.scss
+++ b/sass/components/_mediaqueries.scss
@@ -125,3 +125,113 @@
 }
 
 
+
+@media screen and (min-width:767px){
+    body{
+        
+        margin: 0;
+    }
+
+    .section{
+        padding: 6rem 0 2rem;
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+        &__logo{
+            width: 2rem;
+        }
+    
+        &__list{
+            flex-direction: row;
+            column-gap: 3.5rem;
+        }
+
+        &__link{
+            font-size: var(--normal-font-size);
+            text-transform: initial;
+        }
+
+        &__toggle,
+        &__close{
+            display: none;
+        }
+    }
+
+    .home{
+        &__container{
+            position: relative;
+            grid-template-columns: repeat(2,1fr);
+        }
+
+        &__img{
+            top:-9rem;
+            left:4rem;
+        }
+
+        &__data{
+            padding-top: 8rem;
+        }
+    }
+
+    .specs__img{
+        width: 300px;
+    }
+
+    .case{
+        &__container{
+            column-gap: 5rem;
+        }
+    
+        &__img{
+            width: 300px;
+        }
+
+        &__description{
+            margin-bottom: var(--mb-2);
+        }
+    }
+
+    .discount{
+        &__container{
+            grid-template-columns: 250px max-content;
+            justify-content: center;
+            column-gap: 5rem;
+            padding: 3rem 0;
+        }
+
+        &__title{
+            font-size: var(--h2-font-size);
+            margin-bottom:var(--mb-1) ;
+        }
+
+        &__description{
+            margin-bottom: var(--mb-2);
+        }
+    }
+
+    .products{
+        &__container{
+            grid-template-columns: repeat(3,162px);
+            gap: 6rem 3rem;
+            padding-top: 5rem;
+        }
+
+        &__card{
+            height: 152px;
+            padding: .85rem;
+        }
+
+        &__img{
+            width: 95px;
+        }
+    }
+
+    .footer__container{
+        grid-template-columns: .4fr .7fr .7fr .1fr;
+    }
+
+    
+}
+
+
